<resources>
    <string name="app_name">MovieDB_35</string>
    <string name="get_started">Get Started</string>
    <string name="title_movie">Movie</string>
    <string name="title_category">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rate">Top rate</string>
    <string name="title_up_coming">Up coming</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_action">Action</string>
    <string name="title_categories">Categories</string>
    <string name="title_over_view">Overview</string>
    <string name="title_cast_and_character"><![CDATA[Cast & Character]]></string>
    <string name="title_production">Production</string>
    <string name="title_trailers">trailers</string>
    <string name="text_back">Back</string>
    <string name="cast_info">Cast Info</string>
    <string name="title_birthday">Birthday:</string>
    <string name="title_name">Name:</string>
</resources>
